--- a/Blog/Views/User/Registration.cshtml
+++ b/Blog/Views/User/Registration.cshtml
@@ -4,8 +4,9 @@
 <head>
     <title>Registration</title>
     <style>
-        .indent{
-            margin-top:10%;
+        .indent {
+            margin-top: 8%;
+            float: none
         }
     </style>
 </head>
