--- a/Blog/Views/User/SignIn.cshtml
+++ b/Blog/Views/User/SignIn.cshtml
@@ -3,13 +3,17 @@
     <title>Sign In</title>
     <style>
         .indent {
-            margin-top: 10%;
+            margin-top: 8%;
+        }
+        .static{
+            position:static;
         }
     </style>
 </head>
 <body>
+
     <h1 class="indent text-center text-dark">Sign In</h1>
-    <div class="text-center">
+    <div class="text-center static">
         <form action="/" method="post">
             <p>Email:</p>
             <p><input type="text" name="Email" /></p>
